--- a/src/components/BaseLayout.module.scss
+++ b/src/components/BaseLayout.module.scss
@@ -8,6 +8,15 @@ footer {
   background-color: $dark;
   color: $white;
   transition: all 400ms;
+  min-height: 100vh; /* Ensure full page dark mode */
+  height: 100%;
+  width: 100%;
+
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+  }
 
   a, i, li {
     color: $white;
