--- a/src/components/Navbar.module.scss
+++ b/src/components/Navbar.module.scss
@@ -6,12 +6,12 @@ nav {
 }
 
 .dark {
-  background-color: $dark;
+  background-color: #f3a92a;
 }
 
 
 .light {
-  background-color: $white;
+  background-color: #f6b544;
 }
 
 .active {
